--- a/app/views/layouts/users.html.erb
+++ b/app/views/layouts/users.html.erb
@@ -8,16 +8,17 @@
 	<%= render 'layouts/head' %>
  	
 	<body>
+		<header>
+	        <div class="container clearfix">
+	          	<div class="logo">
+	            	<img src="images/favicon/cloud.jpg"><h2>vivento</h2>
+	          	</div>
+	        </div>
+		</header>
+
 		<div id="wrap" class="wide">
-
-	   		<%= render 'layouts/header' %>
-
-    		<div class="container clearfix">
-				<%= yield %>
-    		</div>
-
-    		<%= render 'layouts/footer' %>
-    		
+			<%= yield %>
+    		<%= render 'layouts/footer' %>   		
       		<%= debug(params) if Rails.env.development? %>
 	    </div>
 	</body>
