implementando login e logout, com lembranca de senha

--- a/app/views/layouts/users.html.erb
+++ b/app/views/layouts/users.html.erb
@@ -18,7 +18,7 @@
 
 		<div id="wrap" class="wide">
 			<%= yield %>
-    		<%= render 'layouts/footer' %>   		
+    		<%= render 'layouts/footer_clean' %>   		
       		<%= debug(params) if Rails.env.development? %>
 	    </div>
 	</body>
