--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -53,7 +53,11 @@
 							<li><a href="#">Excluídas</a></li>
 						</ul>
 					</li>
-					<li><a href="login.html">Sair</a></li>
+					<% if signed_in? %>
+						<li><%= link_to "Sair", signout_path, method: "delete" %></li>
+					<% else %>
+						<li><%= link_to "Entrar", signin_path %></li>
+					<% end %>
 				</ul>
 				
 			</nav>
