algumas melhorias nos layouts

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,36 +3,27 @@
 		
 		<div class="one-third column">
 			<div class="logo">
-				<a href="index.html">
-					<!--img src="images/logo.png" alt="Crevision - Creative Template" /-->
-				</a>
+				<!-- <%= link_to image_tag("cloud.jpg", alt: "Vivento"), root_path %> -->
+            	<h2>Vivento</h2>
 			</div>
 		</div><!-- End Logo -->
 		
 		<div class="two-thirds column">
 			<nav id="menu" class="navigation">
 				<ul id="nav">
-					<li><a class="active" href="#1">Meu Perfil</a>
+					<li><a class="active" href="#">Meu Perfil</a>
 						<ul>
 							<li><a href="perfil.html">Dados Pessoais</a></li>
 							<li><a href="formas_de_pagamento.html">Formas de Pagamento</a></li>
 							<li><a href="#">Notificações via E-mail</a></li>
 						</ul>
 					</li>
-					<li><a href="#2">Pagamentos</a>
+					<li><a href="#">Pagamentos</a>
 						<ul>
 							<li><a href="pagamentos.html">Pagamentos Efetuados</a></li>
-							<li><a href="#">Services</a></li>
-							<li><a href="team.html">Our Team</a></li>
-							<li><a href="process.html">Process</a></li>
-							<li><a href="sidebar_right.html">Page Right Sidebar</a></li>
-							<li><a href="sidebar_left.html">Page Left Sidebar</a></li>
-							<li><a href="FAQ.html">FAQ</a></li>
-							<li><a href="sitemap.html">Sitemap</a></li>
-							<li><a href="full_width.html">Full Width</a></li>
 						</ul>
 					</li>
-					<li><a href="#3">Condomínio</a>
+					<li><a href="#">Condomínio</a>
 						<ul>
 							<li><a href="#">Mural de Avisos</a></li>
 							<li><a href="#">Ideias de Melhorias</a>
@@ -41,12 +32,12 @@
 									<li><a href="#">Votação</a></li>
 								</ul>
 							</li>
-							<li><a href="pricing_tables.html">Reservas</a></li>
-							<li><a href="under_construction.html">Livro de Ocorrências</a></li>
-							<li><a href="404.html">Fale com o síndico</a></li>
+							<li><a href="#">Reservas</a></li>
+							<li><a href="#">Livro de Ocorrências</a></li>
+							<li><a href="#">Fale com o síndico</a></li>
 						</ul>
 					</li>
-					<li><a href="mensagens.html">Mensagens (2)</a>
+					<li><a href="#">Mensagens (2)</a>
 						<ul>
 							<li><a href="#">Recebidas (2)</a></li>
 							<li><a href="#">Enviadas</a></li>
