--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <br>
-            <p>Já tem uma conta? Ah, então vamos entrando...</p>
+            <p>Já tem uma conta? <%= link_to "Ah, então vamos entrando...", signin_path %></p>
           
         </div><!-- End cloumn -->
     </div><!-- End Container -->
