--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -8,12 +8,10 @@
 
 	<%= stylesheet_link_tag    "application", :media => "all" %>
 	<%= javascript_include_tag "application" %>
+    <%= favicon_link_tag 'cloud.jpg' %>
 	<%= csrf_meta_tags %>
 
     <!--[if lt IE 9]>
         <script src="js/html5.js"></script>
     <![endif]-->
-
-    <!-- Favicon -->
-    <link rel="shortcut icon" href="images/favicon/cloud.jpg">
 </head>
