--- a/app/views/layouts/users.html.erb
+++ b/app/views/layouts/users.html.erb
@@ -11,7 +11,7 @@
 		<header>
 	        <div class="container clearfix">
 	          	<div class="logo">
-	            	<img src="images/favicon/cloud.jpg"><h2>vivento</h2>
+					<%= link_to image_tag("cloud.jpg", alt: "Vivento"), root_path %>
 	          	</div>
 	        </div>
 		</header>
