--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,5 @@
 <h1>
   <%= gravatar_for @user %>
-  <%= @user.name %>
 </h1>
 
 <% flash.each do |key, value| %>
@@ -10,4 +9,4 @@
 	</div>
 <% end %>
 
-<%= @user.name %>, <%= @user.email %>
+<%= @user.email %>
