--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,6 +34,7 @@
 								</ul>
 							</li>
 							<li><%= link_to "Condôminos", users_path %></li>
+							<li><%= link_to "Apartamentos", apartments_path %></li>
 							<li><a href="#">Reservas</a></li>
 							<li><a href="#">Livro de Ocorrências</a></li>
 							<li><a href="#">Fale com o síndico</a></li>
