--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,17 +1,19 @@
 <br>
 <% flash.each do |key, value| %>
-	<div class="alert <%= key %> hideit">
-		<p><%= value %></p>
-    	<span class="close"></span>
-	</div>
+<div class="alert <%= key %> hideit">
+	<p><%= value %></p>
+	<span class="close"></span>
+</div>
 <% end %>
 
 <h1>
-  <%= gravatar_for @user %>
+	<%= gravatar_for @user %>
 </h1>
- 
- <%= "#{@user.name} <#{@user.email}> "%>
 
+<%= @user.name %><br>
+<%= @user.email %>
+<br><br>
+<%= link_to @condo.name, @condo %>
 <br>
 <br>
 <%= link_to "Alterar dados", edit_user_path(@user) %>
