--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,16 +1,18 @@
 <div id="under-construction">
     <div class="container clearfix">
         <div class="sixteen columns">
-      
+
             <h1>Vamos criar sua conta?</h1>
             <p>Preencha todos os campos:</p>
-            <br>          
+            <br>
             <div class="clearfix"></div>
 
             <div class="row">
                 <div class="span6 offset3">
                     <%= form_for(@user) do |f| %>
 
+                        <%= collection_select(:user, :condo_id, Condo.all, :id, :name, { :include_blank => 'Selecione seu condomínio' }, { :class => 'subscribe-text' }) %>
+                        <br>
                         <%= f.text_field :email, :placeholder => "E-mail", class: "subscribe-text" %>
                         <br>
                         <%= f.password_field :password, :placeholder => "Escolha uma senha", class: "subscribe-text" %>
@@ -25,7 +27,7 @@
             </div>
             <br>
             <p>Já tem uma conta? <%= link_to "Ah, então vamos entrando...", signin_path %></p>
-          
+
         </div>
     </div>
 </div>
