--- a/app/views/condos/show.html.erb
+++ b/app/views/condos/show.html.erb
@@ -1,13 +1,24 @@
-<p id="notice"><%= notice %></p>
+<% flash.each do |key, value| %>
+<div class="alert <%= key %> hideit">
+    <p><%= value %></p>
+    <span class="close"></span>
+</div>
+<% end %>
+
 <br>
 <p>
 	<h1><%= @condo.name %></h1>
 </p>
-
+<br>
 <p>
-  <%= to_address_line @address %>
+  <%= format_address @address %>
 </p>
 <br>
 <p>
   <%= link_to @condo.website, @condo.website, :target => '_blank' %>
 </p>
+<br>
+<br>
+<%= link_to "Alterar dados", edit_condo_path(@condo) %>
+<br>
+<br>
