criando helpers de validacao e formatacao. alterando partials de footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,12 +3,12 @@
         <br>
         <div class="ten columns">
             <span class="copyright">
-                Criado por <a href="http://www.vivento.com.br" target="_blank" data="Vivento">Vivento</a> em parceria com  
+                Criado por <a href="http://www.vivento.com.br" target="_blank" data="Vivento">Vivento</a> em parceria com
                 <a href="http://www.moip.com.br" target="_blank" data="Moip Pagamentos">Moip Pagamentos</a> | <a href="mailto:hello@vivento.com.br" data="Diga um olá">hello@vivento.com.br</a>
             </span>
         </div>
 
-        <div class="six columns">
+        <div class="four columns">
             <div class="social">
                 <a href="#"><img src="http://themes.jozoor.com/crevision/white/images/icons/facebook.png" alt="" /></a>
                 <a href="#"><img src="http://themes.jozoor.com/crevision/white/images/icons/twitter.png" alt="" /></a>
