--- a/app/views/layouts/_footer_clean.html.erb
+++ b/app/views/layouts/_footer_clean.html.erb
@@ -3,18 +3,19 @@
 
         <div class="two-thirds column copyright">
             <span class="copyright">
-                Criado por <a href="http://www.vivento.com.br" target="_blank" data="Vivento">Vivento</a> em parceria com  
+                Criado por <a href="http://www.vivento.com.br" target="_blank" data="Vivento">Vivento</a> em parceria com
                 <a href="http://www.moip.com.br" target="_blank" data="Moip Pagamentos">Moip Pagamentos</a> | <a href="mailto:hello@vivento.com.br" data="Diga um olá">hello@vivento.com.br</a>
             </span>
         </div>
 
-        <div class="one-third column social-under">
-            <a href="#" data="facebook"><span class="facebook icon black"></span></a>
-            <a href="#" data="twitter"><span class="twitter icon black"></span></a>
-            <a href="#" data="google+"><span class="google_plus icon black"></span></a>
-            <a href="#" data="skype"><span class="skype icon black"></span></a>
-            <a href="#" data="youtube"><span class="youtube icon black"></span></a>
-            <a href="#" data=" linkedin"><span class=" linked_in icon black"></span></a>
+
+        <div class="four columns">
+            <div class="social">
+                <a href="#"><img src="http://themes.jozoor.com/crevision/white/images/icons/facebook.png" alt="" /></a>
+                <a href="#"><img src="http://themes.jozoor.com/crevision/white/images/icons/twitter.png" alt="" /></a>
+                <a href="#"><img src="http://themes.jozoor.com/crevision/white/images/icons/skype.png" alt="" /></a>
+                <a href="#"><img src="http://themes.jozoor.com/crevision/white/images/icons/vimeo.png" alt="" /></a>
+            </div>
         </div>
 
     </div><!-- End container -->
