--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,8 +14,9 @@
 					<li><a class="active" href="#">Meu Perfil</a>
 						<ul>
 							<li><%= link_to "Dados pessoais*", user_path(current_user) %></li>
+							<li><%= link_to "Taxa de condomínio", '/' %></li>
 							<li><a href="formas_de_pagamento.html">Formas de Pagamento</a></li>
-							<li><a href="#">Notificações via E-mail</a></li>
+							<li><a href="#">Preferências</a></li>
 						</ul>
 					</li>
 					<li><a href="#">Pagamentos</a>
