fixing images from css files. alinhando conteudo ao layout

--- a/app/assets/stylesheets/css/shortcodes.css
+++ b/app/assets/stylesheets/css/shortcodes.css
@@ -13,10 +13,10 @@
 /* Accordion
 =========================================================*/
 .ui-accordion .ui-accordion-header {
-	display: block; 
-	cursor: pointer; 
-	position: relative; 
-	zoom: 1; 
+	display: block;
+	cursor: pointer;
+	position: relative;
+	zoom: 1;
 }
 
 #accordion h3 {
@@ -29,7 +29,7 @@
 }
 
 #accordion .plus {
-	background:url(../images/icons/accordion-icons.png) no-repeat 0 0;
+	background:url(/assets/icons/accordion-icons.png) no-repeat 0 0;
 	width: 11px;
 	height: 12px;
 	float: right;
@@ -37,7 +37,7 @@
 }
 
 #accordion .minus {
-	background:url(../images/icons/accordion-icons.png) no-repeat -14px -4px;
+	background:url(/assets/icons/accordion-icons.png) no-repeat -14px -4px;
 	width: 9px;
 	height: 4px;
 	float: right;
@@ -48,12 +48,12 @@
 	position: absolute;
 	left: .5em;
 	top: 50%;
-	margin-top: -8px; 
+	margin-top: -8px;
 }
 
 .ui-accordion .ui-accordion-content {
 	overflow: hidden;
-	zoom: 1; 
+	zoom: 1;
 }
 
 
@@ -67,8 +67,8 @@
 	margin-bottom:12px;
 }
 
-.meter { 
-	height: 23px; 
+.meter {
+	height: 23px;
 	position: relative;
 }
 
@@ -82,9 +82,9 @@
 .meter > span:after, .animate > span > span {
 	content: "";
 	position: absolute;
-	top: 0; 
-	left: 0; 
-	bottom: 0; 
+	top: 0;
+	left: 0;
+	bottom: 0;
 	right: 0;
 	overflow: hidden;
 }
@@ -102,7 +102,7 @@
 }
 
 .error {
-	background-image: url(../images/icons/error.png);
+	background-image: url(/assets/icons/error.png);
 	background-position: 5% 50%;
 	background-repeat: no-repeat;
 	background-color: #fff1f2;
@@ -110,7 +110,7 @@
 }
 
 .success {
-	background-image: url(../images/icons/success.png);
+	background-image: url(/assets/icons/success.png);
 	background-position: 5% 50%;
 	background-repeat: no-repeat;
 	background-color: #f4ffdf;
@@ -118,7 +118,7 @@
 }
 
 .info {
-	background-image: url(../images/icons/info.png);
+	background-image: url(/assets/icons/info.png);
 	background-position: 5% 50%;
 	background-repeat: no-repeat;
 	background-color: #e4f7ff;
@@ -126,7 +126,7 @@
 }
 
 .notice {
-	background-image: url(../images/icons/notice.png);
+	background-image: url(/assets/icons/notice.png);
 	background-position: 5% 50%;
 	background-repeat: no-repeat;
 	background-color: #fdf7d5;
@@ -135,10 +135,10 @@
 
 .close { width:18px; height:18px; position:absolute; right: 15px; top: 15px; cursor:pointer; }
 
-.error .close   { background:url(../images/icons/error-close.png) no-repeat; }
-.success .close { background:url(../images/icons/success-close.png) no-repeat; }
-.info .close    { background:url(../images/icons/info-close.png) no-repeat; }
-.notice .close  { background:url(../images/icons/notice-close.png) no-repeat; }
+.error .close   { background:url(/assets/icons/error-close.png) no-repeat; }
+.success .close { background:url(/assets/icons/success-close.png) no-repeat; }
+.info .close    { background:url(/assets/icons/info-close.png) no-repeat; }
+.notice .close  { background:url(/assets/icons/notice-close.png) no-repeat; }
 
 /* Buttons
 =========================================================*/
@@ -165,7 +165,7 @@
 /* Blockquote
 =========================================================*/
 blockquote {
-	background-image:url(../images/icons/blockqoute.png) ;
+	background-image:url(/assets/icons/blockqoute.png) ;
 	background-repeat:no-repeat;
 	background-position:16px 20px;
 	padding:15px 15px 15px 51px;
@@ -187,11 +187,11 @@ blockquote {
 .colorTip{
 	/* This class is assigned to the color tip span by jQuery */
 	display:none;
-	position:absolute;	
+	position:absolute;
 	left:50%;
 	top:-30px;
 	padding:6px;
-	
+
 	background-color:white;
 	font-family:Arial,Helvetica,sans-serif;
 	font-size:11px;
@@ -201,7 +201,7 @@ blockquote {
 	text-align:center;
 	text-shadow:0 0 1px white;
 	white-space:nowrap;
-	
+
 	-moz-border-radius:2px;
 	-webkit-border-radius:2px;
 	border-radius:2px;
@@ -329,14 +329,14 @@ blockquote {
 
 #toggle-view span.link {
 	position:absolute;
-	right:10px; 
+	right:10px;
 	top:6px;
 }
 
 #toggle-view .panel {
 	padding:10px;
 	display:none;
-}	
+}
 
 /* Dropcaps
 =========================================================*/
@@ -358,15 +358,15 @@ blockquote {
 	background-position:1% 50%;
 }
 
-.square-list li { background:url(../images/icons/list-icons/square.png) no-repeat; background-position:0 50%; }
-.check-list li { background:url(../images/icons/list-icons/check.png) no-repeat; background-position:0 50%; }
-.plus-list li { background:url(../images/icons/list-icons/plus.png) no-repeat; background-position:0 50%; }
-.arrow-list li { background:url(../images/icons/list-icons/arrow.png) no-repeat; background-position:0 50%; }
-.cross-list li { background:url(../images/icons/list-icons/cross.png) no-repeat; background-position:0 50%; }
-.star-list li { background:url(../images/icons/list-icons/star.png) no-repeat; background-position:0 50%; }
-.minus-list li { background:url(../images/icons/list-icons/minus.png) no-repeat; background-position:0 50%; }
-.arrow2-list li { background:url(../images/icons/list-icons/arrow2.png) no-repeat; background-position:0 50%; }
-.circle-list li { background:url(../images/icons/list-icons/circle.png) no-repeat; background-position:0 50%; }
+.square-list li { background:url(/assets/icons/list-icons/square.png) no-repeat; background-position:0 50%; }
+.check-list li { background:url(/assets/icons/list-icons/check.png) no-repeat; background-position:0 50%; }
+.plus-list li { background:url(/assets/icons/list-icons/plus.png) no-repeat; background-position:0 50%; }
+.arrow-list li { background:url(/assets/icons/list-icons/arrow.png) no-repeat; background-position:0 50%; }
+.cross-list li { background:url(/assets/icons/list-icons/cross.png) no-repeat; background-position:0 50%; }
+.star-list li { background:url(/assets/icons/list-icons/star.png) no-repeat; background-position:0 50%; }
+.minus-list li { background:url(/assets/icons/list-icons/minus.png) no-repeat; background-position:0 50%; }
+.arrow2-list li { background:url(/assets/icons/list-icons/arrow2.png) no-repeat; background-position:0 50%; }
+.circle-list li { background:url(/assets/icons/list-icons/circle.png) no-repeat; background-position:0 50%; }
 
 /* Pagination
 =========================================================*/
@@ -395,23 +395,23 @@ blockquote {
 
 * .icon {
 	display:inline-block;
-	background:url(../images/icons/icons/icons.png) no-repeat;
+	background:url(/assets/icons/icons/icons.png) no-repeat;
 	vertical-align:middle;
 	margin: -2px 4px 0 0;
 }
 
 * .icon.gray {
-	background:url(../images/icons/icons/icons-gray.png) no-repeat;
+	background:url(/assets/icons/icons/icons-gray.png) no-repeat;
 }
 
 * .icon.white {
-	background:url(../images/icons/icons/icons-white.png) no-repeat;
+	background:url(/assets/icons/icons/icons-white.png) no-repeat;
 }
 
 /* social */
 * .social-icon {
 	display:inline-block;
-	background:url(../images/icons/icons/social-icons.png) no-repeat;
+	background:url(/assets/icons/icons/social-icons.png) no-repeat;
 	vertical-align:middle;
 	margin:0 1px 5px 0;
 }
@@ -460,7 +460,7 @@ table th, table td {
 .pricing-tables-1 .tables-column {
 	width:234px;
 	text-align:center;
-	float: left; 
+	float: left;
 	display: inline;
 	margin:10px 0;
 	border-right:1px solid #fff;
@@ -470,7 +470,7 @@ table th, table td {
 .pricing-tables-2 .tables-column {
 	width:187px;
 	text-align:center;
-	float: left; 
+	float: left;
 	display: inline;
 	margin:10px 0;
 	border-right:1px solid #fff;
@@ -502,7 +502,7 @@ table th, table td {
 .tables-column.featured .footer h3 span {
 	padding-bottom:15px;
 }
-	
+
 
 .tables-column .header h3 span {
 	display:block;
@@ -524,28 +524,28 @@ table th, table td {
 }
 
 .list li span.ok.gray {
-	background: url(../images/icons/pricing-tabe-icons.png) no-repeat 0 0;
+	background: url(/assets/icons/pricing-tabe-icons.png) no-repeat 0 0;
 	width: 13px;
 	height: 12px;
 	display: inline-block;
 }
 
 .list li span.minus.gray {
-	background: url(../images/icons/pricing-tabe-icons.png) no-repeat -33px -7px;
+	background: url(/assets/icons/pricing-tabe-icons.png) no-repeat -33px -7px;
 	width: 9px;
 	height: 4px;
 	display: inline-block;
 }
 
 .list li span.ok.black {
-	background: url(../images/icons/pricing-tabe-icons.png) no-repeat -16px 0;
+	background: url(/assets/icons/pricing-tabe-icons.png) no-repeat -16px 0;
 	width: 13px;
 	height: 12px;
 	display: inline-block;
 }
 
 .list li span.minus.black {
-	background: url(../images/icons/pricing-tabe-icons.png) no-repeat -47px -7px;
+	background: url(/assets/icons/pricing-tabe-icons.png) no-repeat -47px -7px;
 	width: 9px;
 	height: 4px;
 	display: inline-block;
