--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,44 +1,43 @@
-<h1>Atualize seus dados pessoais</h1>
-<br>
-<div class="row">
-    <div class="span16">
-    
-        <% flash.each do |key, value| %>
-            <div class="alert <%= key %> hideit">
-                <p><%= value %></p>
-                <span class="close"></span>
-            </div>
-        <% end %>
-            
-        <%= form_for(@user, :html => { :class => "form-elements" }) do |f| %>
-        
-        <%= gravatar_for @user %><br>
-        <a href="http://gravatar.com/emails">alterar gravatar</a>
-        <br><br>
-        <fieldset>
-            <%= f.label :email, "E-mail" %><br>
-            <%= f.text_field :email, :class => 'span5' %>
-        </fieldset>
+<div class="sixteen columns">
+    <br>
+    <h1>Atualize seus dados pessoais</h1>
+    <br>
 
-        <fieldset>
-            <%= f.label :name, "Nome completo" %><br>
-            <%= f.text_field :name, :class => 'span5' %>
-        </fieldset>
-        <fieldset>
-            <%= f.label :cpf, "CPF" %><br>
-            <%= f.text_field :cpf, :class => 'span5' %>
-        </fieldset>
-        <fieldset>
-            <%= f.label :birthdate, "Data de nascimento" %><br>
-            <%= f.date_select :birthdate %> 
-        </fieldset>
-        <fieldset>
-            <%= f.label :phone_number, "Telefone celular" %><br>
-            (<%= f.text_field :phone_area_code, :class => 'span1' %>) <%= f.text_field :phone_number, :class => 'span4' %>
-        </fieldset>
-        <br>
-        <br>
-        <%= f.submit "Salvar alterações", class: "button medium color" %>
-        <% end %>
-    </div>
+    <% flash.each do |key, value| %>
+        <div class="alert <%= key %> hideit">
+            <p><%= value %></p>
+            <span class="close"></span>
+        </div>
+    <% end %>
+
+    <%= form_for(@user, :html => { :class => "form-elements" }) do |f| %>
+
+    <%= gravatar_for @user %><br>
+    <a href="http://gravatar.com/emails">alterar gravatar</a>
+    <br><br>
+    <fieldset>
+        <%= f.label :email, "E-mail" %><br>
+        <%= f.text_field :email, :class => 'span5' %>
+    </fieldset>
+
+    <fieldset>
+        <%= f.label :name, "Nome completo" %><br>
+        <%= f.text_field :name, :class => 'span5' %>
+    </fieldset>
+    <fieldset>
+        <%= f.label :cpf, "CPF" %><br>
+        <%= f.text_field :cpf, :class => 'span5' %>
+    </fieldset>
+    <fieldset>
+        <%= f.label :birthdate, "Data de nascimento" %><br>
+        <%= f.date_select :birthdate %>
+    </fieldset>
+    <fieldset>
+        <%= f.label :phone_number, "Telefone celular" %><br>
+        (<%= f.text_field :phone_area_code, :class => 'span1' %>) <%= f.text_field :phone_number, :class => 'span4' %>
+    </fieldset>
+    <br>
+    <br>
+    <%= f.submit "Salvar alterações", class: "button medium color" %>
+    <% end %>
 </div>
