--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,25 @@
-<h1>All users</h1>
+<br>
+<% unless flash.empty? %>
+    <div class="sixteen columns">
+        <% flash.each do |key, value| %>
+        <div class="alert <%= key %> hideit">
+            <p><%= value %></p>
+            <span class="close"></span>
+        </div>
+        <% end %>
+    </div>
+<% end %>
 
-<%= will_paginate %>
-<ul class="users">
-    <%= render @users%>
-</ul>
-<%= will_paginate %>
+<div class="sixteen columns">
+    <h1 class="page-title">
+        Vizinhos queridos! <small>(<%= User.count %>)</small>
+        <span class="line"></span>
+    </h1>
+
+    <%= will_paginate %>
+    <ul class="users">
+        <%= render @users%>
+    </ul>
+    <%= will_paginate %>
+</div>
+<br>
